# faceit-discord-bot

./: .env.example  Cargo.toml  README.md
src/: bot.rs  main.rs
src/api/: mod.rs  model.rs
