[package]
name = "faceit-discord-bot"
version = "0.1.0"
authors = ["Ramón Berrutti <ramonberrutti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.9.2", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "0.2", features = ["macros"] }
reqwest = { version = "0.10.9", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
dotenv = "0.15.0"
